--- a/.github/workflows/test-all-boards.yml
+++ b/.github/workflows/test-all-boards.yml
@@ -5,7 +5,7 @@ name: 'Test All Boards'
 on: workflow_dispatch
 jobs:
   build:
-    if: github.repository_owner == 'manna-harbour'
+    if: github.repository_owner == 'Hypoactivity'
     uses: ./.github/workflows/main.yml
     secrets: inherit
     with:
