--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 jobs:
   build:
-    if: github.repository_owner == 'Hypoactivity'
+    if: github.repository_owner == 'manna-harbour'
     uses: ./.github/workflows/main.yml
     secrets: inherit
     with:
